--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.12.0",
+    "sequelize": "^5.12.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.0"
   }
 }
