--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/osergioneto/go-barber#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.12.0",
