--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/osergioneto/go-barber#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-loki": "^1.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "nunjucks": "^3.2.0",
