--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-loki": "^1.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "nunjucks": "^3.2.0",
